omnibor-cli/tests/snapshots/test__artifact_id_json.snap
---
source: omnibor-cli/tests/test.rs
info:
  program: omnibor
  args:
    - artifact
    - id
    - "--format"
    - json
    - "--path"
    - tests/data/main.c
---
success: true
exit_code: 0
----- stdout -----
{"id":"<GITOID>","path":"tests/data/main.c"}

----- stderr -----
