omnibor-cli/tests/snapshots/test__artifact_id_short.snap
---
source: omnibor-cli/tests/test.rs
info:
  program: omnibor
  args:
    - artifact
    - id
    - "--format"
    - short
    - "--path"
    - tests/data/main.c
---
success: true
exit_code: 0
----- stdout -----
<GITOID>

----- stderr -----
