omnibor-cli/tests/snapshots/test__artifact_no_args.snap
---
source: omnibor-cli/tests/test.rs
info:
  program: omnibor
  args:
    - id
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Create identifiers and find artifacts by identifier

Usage: omnibor id [OPTIONS] <COMMAND>

Commands:
  create  For files, prints their Artifact ID. For directories, recursively prints IDs for all files under it
  find    Find file matching an Artifact ID
  help    Print this message or the help of the given subcommand(s)

Options:
  -f, --format <FORMAT>  Output format [env: OMNIBOR_FORMAT=] [possible values: plain, short, json]
  -d, --dir <DIR>        Directory to store manifests [env: OMNIBOR_DIR=]
  -c, --config <CONFIG>  Path to a configuration file [env: OMNIBOR_CONFIG=]
  -D, --debug-console    Turn on 'tokio-console' debug integration [env: OMNIBOR_DEBUG_CONSOLE=]
  -v, --verbose...       Increase logging verbosity
  -q, --quiet...         Decrease logging verbosity
  -h, --help             Print help (see more with '--help')
  -V, --version          Print version
